--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hackathon-node-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "mongo.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
